--- a/style.css
+++ b/style.css
@@ -39,3 +39,13 @@ img{
   margin-right: -50%;
   transform: translate(-50%, -50%);
 }
+
+@media (max-width: 500px) {
+  
+  #clockDisplay {
+    font-size: 4.5rem;
+  }
+  #welcome{
+    font-size: 2.7rem;
+  }
+} 
