--- a/style.css
+++ b/style.css
@@ -44,8 +44,9 @@ img{
   
   #clockDisplay {
     font-size: 4.5rem;
+    font-weight: 600;
   }
   #welcome{
-    font-size: 2.7rem;
+    font-size: 2.2rem;
   }
 } 
